fix toList()